--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -2,3 +2,7 @@
     /* @apply w-screen sm:w-5/6 sm:mx-auto; */
     @apply max-w-7xl mx-auto px-2 sm:px-6 lg:px-8;
 }
+
+.subcontenedor{
+    @apply max-w-5xl mx-auto px-2 sm:px-6 lg:px-8;
+}
